[package]
name = "imgname"
version = "0.2.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "4.0"
filetime = "0.2"
kamadak-exif = "0.5"
same-file = "1.0"

[build-dependencies]
clap = "4.0"
clap_complete = "4.0"